Mobile and Desktop index: Updating footer

--- a/index.html
+++ b/index.html
@@ -41,17 +41,19 @@
         </div>
     </header>
 
-    <main style="background-image: url('src/images/bg-index2.jpeg'); background-size: cover;"
-        class="flex flex-col items-center h-90h">
-        <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 px-4 font-bold text-center">Academia Ibra: a
-            Fábrica de campeões</h1>
-        <div id="main__container--images" class="h-screen flex flex-col items-center justify-center gap-y-4 pb-20">
-            <img src="src/images/circuito-logo.png" class="h-40h" alt="Logo do circuito Ibra">
-            <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" id="main__button"
-                class="main__button--style button__hover lg:w-3/5">Inscreva-se</a>
-        </div>
+    <main class="bg-green-950 pb-8">
+        <section id="main__intro" style="background-image: url('src/images/bg-index2.jpeg'); background-size: cover;"
+        class="flex flex-col items-center h-90h mb-10">
+            <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 px-4 font-bold text-center">Academia Ibra: a
+                Fábrica de campeões</h1>
+            <div id="main__container--images" class="h-screen flex flex-col items-center justify-center gap-y-4 pb-20">
+                <img src="src/images/circuito-logo.png" class="h-40h" alt="Logo do circuito Ibra">
+                <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" id="main__button"
+                    class="main__button--style button__hover lg:w-3/5">Inscreva-se</a>
+            </div>
+        </section>
 
-        <section id="patrocinadores" class="flex flex-col items-center">
+        <section id="main__patrocinadores" class="flex flex-col items-center">
             <h2 class="text-white text-4xl font-bold uppercase">Nossos parceiros</h2>
 
             <div id="patrocinadores__article--container" class="main__patrocinadores">
@@ -63,7 +65,8 @@
                         <h3 class="font-bold uppercase text-lg">Inspirar para o esporte e formar campeões</h3>
                         <p class="mb-4">ouvidoria@cbclubes.org.br</p>
                         <a href="https://www.cbclubes.org.br/" target="_blank"
-                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para visitar a nossa página</a>
+                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para
+                            visitar a nossa página</a>
                     </div>
                 </article>
 
@@ -78,7 +81,8 @@
                         <h3 class="font-bold uppercase text-lg">AGS tornando seus negócios possíveis</h3>
                         <p class="mb-4">contato@agsrefrigeracao.com.br</p>
                         <a href="https://agsrefrigeracao.com.br/novosite/" target="_blank"
-                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para visitar a nossa página</a>
+                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para
+                            visitar a nossa página</a>
                     </div>
                 </article>
 
@@ -92,7 +96,8 @@
                         <h3 class="font-bold uppercase text-lg max-w-xs">Estamos prontos para atender você</h3>
                         <p class="mb-4">contato@rcassociados.adv.br</p>
                         <a href="https://rcassociados.adv.br/" target="_blank"
-                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para visitar a nossa página</a>
+                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para
+                            visitar a nossa página</a>
                     </div>
                 </article>
 
@@ -106,7 +111,8 @@
                         <h3 class="font-bold uppercase text-lg">Especialista em realizar sonhos</h3>
                         <p class="mb-4">nortesulcturismo@gmail.com</p>
                         <a href="https://www.instagram.com/nortesulturismo_/" target="_blank"
-                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para visitar a nossa página</a>
+                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para
+                            visitar a nossa página</a>
                     </div>
                 </article>
 
@@ -121,7 +127,8 @@
                         <h3 class="font-bold uppercase text-lg">A gente avança fazendo melhor</h3>
                         <p class="mb-4">ouvidoria@caruaru.pe.gov.br</p>
                         <a href="https://caruaru.pe.gov.br/" target="_blank"
-                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para visitar a nossa página</a>
+                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para
+                            visitar a nossa página</a>
                     </div>
                 </article>
             </div>
@@ -129,8 +136,7 @@
 
     </main>
 
-    <!-- <footer
-        class="footer bg-slate-700 text-white flex flex-col items-center gap-y-2 py-2 font-barlow">
+    <footer class="footer bg-slate-700 text-white flex flex-col items-center gap-y-2 py-2 font-barlow">
         <h2 class="uppercase">Academia Ibra Tênis de Mesa</h2>
         <div id="footer__container--icons" class="flex gap-x-4">
             <a href="https://api.whatsapp.com/send?phone=81998320016&text=Como%20podemos%20ajudá-lo?" target="_blank"><i
@@ -140,7 +146,7 @@
             <a href="https://goo.gl/maps/LLFepdFvPgzSioes5?coh=178571&entry=tt" target="_blank"><i
                     class="fa-solid fa-location-dot"></i></a>
         </div>
-    </footer> -->
+    </footer>
 
     <script src="src/js/main.js"></script>
 </body>
