Mobile and Desktop: Refactoring h2 and articles

--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
         </section>
 
         <section id="main__patrocinadores" class="flex flex-col items-center">
-            <h2 class="text-white text-4xl font-bold uppercase">Nossos parceiros</h2>
+            <h2 class="text-white text-3xl font-bold uppercase">Nossos parceiros</h2>
 
             <div id="patrocinadores__article--container" class="main__patrocinadores">
                 <article id="patrocinadores__article--cbc"
                     class="bg-white flex flex-col items-center gap-y-10 py-8 justify-center index__article--border index__article--lg">
-                    <img src="src/images/parceiros-cbc.jpeg" class="h-32" alt="Logo cbc">
+                    <img src="src/images/parceiros-cbc.jpeg" class="h-32 lg:mx-12" alt="Logo cbc">
 
                     <div class="article__cbc--text px-4 text-center">
                         <h3 class="font-bold uppercase text-lg">Inspirar para o esporte e formar campeões</h3>
                         <p class="mb-4">ouvidoria@cbclubes.org.br</p>
                         <a href="https://www.cbclubes.org.br/" target="_blank"
-                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para
+                            class="bg-gray-800 text-white px-4 py-3 rounded-md index__article--hover">Clique para
                             visitar a nossa página</a>
                     </div>
                 </article>
@@ -81,7 +81,7 @@
                         <h3 class="font-bold uppercase text-lg">AGS tornando seus negócios possíveis</h3>
                         <p class="mb-4">contato@agsrefrigeracao.com.br</p>
                         <a href="https://agsrefrigeracao.com.br/novosite/" target="_blank"
-                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para
+                            class="bg-gray-800 text-white px-4 py-3 rounded-md index__article--hover">Clique para
                             visitar a nossa página</a>
                     </div>
                 </article>
@@ -96,7 +96,7 @@
                         <h3 class="font-bold uppercase text-lg max-w-xs">Estamos prontos para atender você</h3>
                         <p class="mb-4">contato@rcassociados.adv.br</p>
                         <a href="https://rcassociados.adv.br/" target="_blank"
-                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para
+                            class="bg-gray-800 text-white px-4 py-3 rounded-md index__article--hover">Clique para
                             visitar a nossa página</a>
                     </div>
                 </article>
@@ -111,7 +111,7 @@
                         <h3 class="font-bold uppercase text-lg">Especialista em realizar sonhos</h3>
                         <p class="mb-4">nortesulcturismo@gmail.com</p>
                         <a href="https://www.instagram.com/nortesulturismo_/" target="_blank"
-                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para
+                            class="bg-gray-800 text-white px-4 py-3 rounded-md index__article--hover">Clique para
                             visitar a nossa página</a>
                     </div>
                 </article>
@@ -127,7 +127,7 @@
                         <h3 class="font-bold uppercase text-lg">A gente avança fazendo melhor</h3>
                         <p class="mb-4">ouvidoria@caruaru.pe.gov.br</p>
                         <a href="https://caruaru.pe.gov.br/" target="_blank"
-                            class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para
+                            class="bg-gray-800 text-white px-4 py-3 rounded-md index__article--hover">Clique para
                             visitar a nossa página</a>
                     </div>
                 </article>
