--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 
     <main class="bg-green-950 pb-8">
         <section id="main__intro" style="background-image: url('src/images/bg-index2.jpeg'); background-size: cover;"
-        class="flex flex-col items-center h-90h mb-10">
+        class="flex flex-col items-center h-90h mb-10 relative">
             <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 px-4 font-bold text-center">Academia Ibra: a
                 Fábrica de campeões</h1>
-            <div id="main__container--images" class="h-screen flex flex-col items-center justify-center gap-y-4 pb-20">
+            <div id="main__container--images" class="bg-green-950 flex flex-col items-center justify-center gap-y-4 py-8 px-4 rounded-md absolute bottom-2 right-8">
                 <img src="src/images/circuito-logo.png" class="h-40h lg:h-40" alt="Logo do circuito Ibra">
                 <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" id="main__button"
-                    class="main__button button__hover lg:w-3/5">Inscreva-se</a>
+                    class="main__button button__hover lg:w-10/12">Inscreva-se</a>
             </div>
         </section>
 
