--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <nav
             class="hidden bg-slate-600 h-90h w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
-                <li class="header__li--style"><a href="">Início</a></li>
-                <li class="header__li--style"><a href="">Sobre</a></li>
-                <li class="header__li--style"><a href="parceiros.html">Parceiros</a></li>
-                <li class="header__li--style"><a href="circuito.html">O circuito</a></li>
-                <li class="header__li--style"><a href="">Contato</a></li>
+                <li class="header__nav--li"><a href="">Início</a></li>
+                <li class="header__nav--li"><a href="">Sobre</a></li>
+                <li class="header__nav--li"><a href="parceiros.html">Parceiros</a></li>
+                <li class="header__nav--li"><a href="circuito.html">O circuito</a></li>
+                <li class="header__nav--li"><a href="">Contato</a></li>
             </ul>
         </nav>
 
@@ -46,8 +46,8 @@
         class="flex flex-col items-center h-90h mb-10 relative">
             <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 px-4 font-bold text-center">Academia Ibra: a
                 Fábrica de campeões</h1>
-            <div id="main__container--images" class="bg-green-950 flex flex-col items-center justify-center gap-y-4 py-8 px-4 rounded-md absolute bottom-2 right-8">
-                <img src="src/images/circuito-logo.png" class="h-40h lg:h-40" alt="Logo do circuito Ibra">
+            <div id="main__container--images" class="lg:bg-green-950 flex flex-col items-center justify-center gap-y-4 py-8 px-4 rounded-md lg:absolute lg:bottom-4 lg:right-4">
+                <img src="src/images/circuito-logo.png" class="h-40h lg:h-32" alt="Logo do circuito Ibra">
                 <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" id="main__button"
                     class="main__button button__hover lg:w-10/12">Inscreva-se</a>
             </div>
