Mobile parceiros: updating li

--- a/parceiros.html
+++ b/parceiros.html
@@ -27,11 +27,11 @@
         <nav class="hidden bg-slate-600 h-93% w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
         lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
-                <li class="header__li--style"><a href="index.html">Início</a></li>
-                <li class="header__li--style"><a href="">Sobre</a></li>
-                <li class="header__li--style"><a href="parceiros.html">Parceiros</a></li>
-                <li class="header__li--style"><a href="circuito.html">O circuito</a></li>
-                <li class="header__li--style"><a href="">Contato</a></li>
+                <li class="header__nav--li"><a href="index.html">Início</a></li>
+                <li class="header__nav--li"><a href="">Sobre</a></li>
+                <li class="header__nav--li"><a href="parceiros.html">Parceiros</a></li>
+                <li class="header__nav--li"><a href="circuito.html">O circuito</a></li>
+                <li class="header__nav--li"><a href="">Contato</a></li>
             </ul>
         </nav>
 
