Mobile: updating nav size

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="flex items-center justify-between p-2 font-barlow lg:p-0">
         <img src="src/images/logo.jpg" class="h-12 lg:h-14 lg:ml-2" alt="Logo da Ibra Academia de Tênis de Mesa">
         <nav
-            class="hidden bg-slate-600 h-90h w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
+            class="hidden bg-slate-600 h-full w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
                 <li class="header__nav--li"><a href="">Início</a></li>
                 <li class="header__nav--li"><a href="">Sobre</a></li>
