Mobile and Desktop: Updating circuito style

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         class="flex flex-col items-center h-90h mb-10 relative">
             <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 px-4 font-bold text-center">Academia Ibra: a
                 Fábrica de campeões</h1>
-            <div id="main__container--images" class="lg:bg-green-950 flex flex-col items-center justify-center gap-y-4 py-8 px-4 rounded-md lg:absolute lg:bottom-4 lg:right-4">
-                <img src="src/images/circuito-logo.png" class="h-40h lg:h-32" alt="Logo do circuito Ibra">
+            <div id="main__container--images" class="lg:bg-blue-950 lg:border-2 lg:border-black lg:border-solid flex flex-col items-center justify-center gap-y-4 py-8 px-4 rounded-md lg:absolute lg:bottom-4 lg:right-4 lg:flex-row lg:gap-x-4 lg:py-2">
+                <img src="src/images/circuito-logo.png" class="h-40h lg:h-20" alt="Logo do circuito Ibra">
                 <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" id="main__button"
-                    class="main__button button__hover lg:w-10/12">Inscreva-se</a>
+                    class="main__button button__hover lg:w-full lg:px-2">Inscreva-se</a>
             </div>
         </section>
 
