Mobile and Desktop: Updating title and logo

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
     <main class="bg-green-950 pb-8">
         <section id="main__intro" style="background-image: url('src/images/bg-index2.jpeg'); background-size: cover;"
         class="flex flex-col items-center h-90h mb-10 relative">
-            <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 px-4 font-bold text-center">Academia Ibra: a
+            <h1 id="main__titulo" class="bg-blue-900 uppercase text-white text-3xl mt-8 px-4 font-bold text-center">Academia Ibra: a
                 Fábrica de campeões</h1>
+            
             <div id="main__container--images" class="main__container--images animate__animated animate__flash animate__repeat-3">
                 <img src="src/images/circuito-logo.png" class="h-40h lg:h-20" alt="Logo do circuito Ibra">
                 <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" id="main__button"
