Mobile and Desktop: Refactoring regulamento

--- a/regulamento.html
+++ b/regulamento.html
@@ -246,12 +246,10 @@
                         <li>04 a 06 de agosto de 2023;</li>
                         <li>01 a 03 de setembro de 2023;</li>
                         <li>06 a 08 de outubro de 2023;</li>
-                        <li>06 a 08 de outubro de 2023.</li>
+                        <li>17 a 19 de outubro de 2023.</li>
                     </ul>
 
-                    <p class="text-justify"><span>TOP 16: </span>(os 16 melhores, masculino e feminino do circuito) 08 a
-                        10
-                        de dezembro de 2023.</p>
+                    <p class="text-justify"><span>TOP 16: </span>(os 16 melhores, masculino e feminino do circuito) 08 a 10 de dezembro de 2023.</p>
                 </article>
 
                 <article class="flex flex-col items-center pb-6">
@@ -331,29 +329,25 @@
                     <h4 class="uppercase bg-green-900 px-2 rounded">Masculino e Feminino:</h4>
                     <h5>Inscritos ou inscritas nas categorias de Ping Pong:</h5>
                     <ul class="list-disc list-inside pb-4">
-                        <li>6 a 8 anos;</li>
-                        <li>9 a 10 anos;</li>
-                        <li>11 a 12 anos;</li>
-                        <li>13 a 15 anos;</li>
-                        <li>16 a 18 anos;</li>
-                        <li>19 a 29 anos;</li>
+                        <li>6 a 11 anos;</li>
+                        <li>12 a 14 anos;</li>
+                        <li>15 a 17 anos;</li>
+                        <li>18 a 29 anos;</li>
                         <li>Categoria livre;</li>
                         <li>30 a 49 anos;</li>
-                        <li>50 a 59 anos;</li>
-                        <li>60 anos até 69;</li>
-                        <li>a partir de 70 anos.</li>
+                        <li>Acima dos 50 anos.</li>
                     </ul>
 
                     <h4 class="uppercase bg-green-900 px-2 rounded">Masculino e Feminino:</h4>
-                    <h5>Inscritos ou inscritas no tênis de mesa:</h5>
+                    <h5>Inscritos ou inscritas nas divisões de federados ou não (Tênis de Mesa)</h5>
                     <ul class="list-disc list-inside pb-4">
-                        <li>Divisão A;</li>
-                        <li>Divisão B;</li>
-                        <li>Divisão C;</li>
-                        <li>Divisão D;</li>
-                        <li>Divisão E;</li>
-                        <li>Divisão F.</li>
+                        <li>1ª Divisão (RATING A e B);</li>
+                        <li>2ª Divisão (RATING C e D);</li>
+                        <li>3ª Divisão (RATING E e F);</li>
+                        <li>4ª Divisão (RATING G).</li>
                     </ul>
+
+                    <p>O circuito terá seu próprio programa de pontuação e o seu ranking, onde o atleta poderá subir de categoria durante o circuito.</p>
                 </article>
             </section>
 
@@ -375,7 +369,7 @@
 
                     <article class="flex flex-col items-center pb-6">
                         <h4 class="bg-green-900 px-2 rounded">Competidores das categorias de TÊNIS DE MESA</h4>
-                        <h5>Divisão A</h5>
+                        <h5>1ª Divisão</h5>
                         <ul class="list-disc list-inside pb-4">
                             <li>1º lugar: 150 pontos;</li>
                             <li>2º lugar: 108 pontos;</li>
@@ -383,7 +377,7 @@
                             <li>5º ao 8º lugar: 72 pontos.</li>
                         </ul>
 
-                        <h4>Divisão B</h4>
+                        <h4>2ª Divisão</h4>
                         <ul class="list-disc list-inside pb-4">
                             <li>1º lugar: 125 pontos;</li>
                             <li>2º lugar: 90 pontos;</li>
@@ -391,7 +385,7 @@
                             <li>5º ao 8º lugar: 60 pontos.</li>
                         </ul>
 
-                        <h4>Divisão C</h4>
+                        <h4>3ª Divisão</h4>
                         <ul class="list-disc list-inside pb-4">
                             <li>1º lugar: 100 pontos;</li>
                             <li>2º lugar: 72 pontos;</li>
@@ -399,28 +393,12 @@
                             <li>5º ao 8º lugar: 48 pontos.</li>
                         </ul>
 
-                        <h4>Divisão D</h4>
+                        <h4>4ª Divisão</h4>
                         <ul class="list-disc list-inside pb-4">
                             <li>1º lugar: 75 pontos;</li>
                             <li>2º lugar: 54 pontos;</li>
                             <li>Dois 3º lugares: 45 pontos;</li>
                             <li>5º ao 8º lugar: 36 pontos.</li>
-                        </ul>
-
-                        <h4>Divisão E</h4>
-                        <ul class="list-disc list-inside pb-4">
-                            <li>1º lugar: 50 pontos;</li>
-                            <li>2º lugar: 36 pontos;</li>
-                            <li>Dois 3º lugares: 30 pontos;</li>
-                            <li>5º ao 8º lugar: 24 pontos.</li>
-                        </ul>
-
-                        <h4>Divisão F</h4>
-                        <ul class="list-disc list-inside pb-4">
-                            <li>1º lugar: 25 pontos;</li>
-                            <li>2º lugar: 18 pontos;</li>
-                            <li>Dois 3º lugares: 15 pontos;</li>
-                            <li>5º ao 8º lugar: 12 pontos.</li>
                         </ul>
                     </article>
                 </div>
