Mobile and Desktop: Updating layouts

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body class="box-border">
     <header class="flex items-center justify-between p-2 font-barlow lg:p-0">
-        <img src="src/images/logo.jpg" class="h-12 lg:h-14 lg:ml-2" alt="Logo da Ibra Academia de Tênis de Mesa">
+        <img src="src/images/logo.png" class="h-12 lg:h-14 lg:ml-2" alt="Logo da Ibra Academia de Tênis de Mesa">
         <nav
             class="hidden bg-slate-600 h-full w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
@@ -41,12 +41,18 @@
     </header>
 
     <main class="bg-green-950 pb-8">
-        <section id="main__intro" style="background-image: url('src/images/bg-index2.jpeg'); background-size: cover;"
-        class="flex flex-col items-center h-90h mb-10 relative">
-            <h1 id="main__titulo" class="bg-blue-900 uppercase text-white text-3xl mt-8 px-4 font-bold text-center">Academia Ibra: a
-                Fábrica de campeões</h1>
-            
-            <div id="main__container--images" class="main__container--images animate__animated animate__flash animate__repeat-3">
+        <section id="main__intro" style="background-image: url('src/images/bg-index2.jpeg');" class="flex flex-col items-center h-90h mb-10 relative">
+            <h1 id="main__titulo" class=" uppercase text-white text-3xl mt-8 px-4 font-bold text-center">
+                Academia Ibra: a Fábrica de campeões</h1>
+                
+                <!-- <div class="flex gap-x-4 items-center">
+                    <p class="uppercase font-barlow font-bold text-white text-2xl">Academia Ibra:</p>
+                    <img src="src/images/logo.png" class="lg:h-96" alt="">
+                <p class="uppercase font-barlow font-bold text-white text-2xl">A fábrica de campeões</p>
+            </div> -->
+
+            <div id="main__container--images"
+                class="main__container--images animate__animated animate__flash animate__repeat-3">
                 <img src="src/images/circuito-logo.png" class="h-40h lg:h-20" alt="Logo do circuito Ibra">
                 <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" id="main__button"
                     class="main__button button__hover lg:w-full lg:px-2">Inscreva-se</a>
