--- a/circuito.html
+++ b/circuito.html
@@ -23,7 +23,7 @@
 
 <body class="bg-bodyBgColor max-h-screen">
     <header class="bg-white flex items-center justify-between p-2 font-barlow">
-        <img src="src/images/logo.jpg" class="h-12 lg:h-14 lg:ml-2" alt="Logo do circuito Ibra de Tênis de Mesa">
+        <img src="src/images/logo.png" class="h-12 lg:h-14 lg:ml-2" alt="Logo do circuito Ibra de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-full w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
             lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
@@ -35,6 +35,16 @@
                 <li
                     class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
                     <a href="regulamento.html">Regulamento</a>
+                </li>
+
+                <li
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
+                    <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" target="_blank">Inscrições</a>
+                </li>
+
+                <li
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
+                    <a href="#">Chaveamento</a>
                 </li>
             </ul>
         </nav>
