Mobile and Desktop index: Refactoring items

--- a/index.html
+++ b/index.html
@@ -41,22 +41,17 @@
     </header>
 
     <main class="bg-green-950 pb-8">
-        <section id="main__intro" style="background-image: url('src/images/bg-index2.jpeg');" class="flex flex-col items-center h-90h mb-10 relative">
-            <h1 id="main__titulo" class=" uppercase text-white text-3xl mt-8 px-4 font-bold text-center">
+        <section id="main__intro" style="background-image: url('src/images/bg-index2.jpeg');" class="flex flex-col items-center justify-center h-90h mb-10 relative">
+            <h1 id="main__titulo" class="w-4/5 bg-blue-900 font-barlow uppercase text-white text-3xl mt-8 px-4 font-bold text-center rounded tracking-wider">
                 Academia Ibra: a Fábrica de campeões</h1>
-                
-                <!-- <div class="flex gap-x-4 items-center">
-                    <p class="uppercase font-barlow font-bold text-white text-2xl">Academia Ibra:</p>
-                    <img src="src/images/logo.png" class="lg:h-96" alt="">
-                <p class="uppercase font-barlow font-bold text-white text-2xl">A fábrica de campeões</p>
-            </div> -->
-
-            <div id="main__container--images"
+            
+            <img src="src/images/logo.png" class="h-50h lg:h-52 lg:absolute lg:right-8 lg:bottom-4 lg:animate-pulse" alt="">
+            <!-- <div id="main__container--images"
                 class="main__container--images animate__animated animate__flash animate__repeat-3">
                 <img src="src/images/circuito-logo.png" class="h-40h lg:h-20" alt="Logo do circuito Ibra">
                 <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" id="main__button"
                     class="main__button button__hover lg:w-full lg:px-2">Inscreva-se</a>
-            </div>
+            </div> -->
         </section>
 
         <section id="main__patrocinadores" class="flex flex-col items-center">
