Desktop index: Refactoring title

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     </header>
 
     <main class="bg-green-950 pb-8">
-        <section id="main__intro" style="background-image: url('src/images/bg-index2.jpeg');" class="flex flex-col items-center justify-center h-90h mb-10 relative">
-            <h1 id="main__titulo" class="w-4/5 bg-blue-900 font-barlow uppercase text-white text-3xl mt-8 px-4 font-bold text-center rounded tracking-wider">
+        <section id="main__intro" style="background-image: url('src/images/bg-index2.jpeg');" class="flex flex-col items-center justify-center h-90h mb-10 relative lg:justify-normal">
+            <h1 id="main__titulo" class="bg-blue-900 font-barlow uppercase text-white text-3xl mt-8 px-4 font-bold text-center rounded w-4/5 tracking-wider lg:w-auto">
                 Academia Ibra: a Fábrica de campeões</h1>
             
-            <img src="src/images/logo.png" class="h-50h lg:h-52 lg:absolute lg:right-8 lg:bottom-4 lg:animate-pulse" alt="">
+            <img src="src/images/logo.png" class="h-50h mt-4 lg:h-52 lg:absolute lg:right-8 lg:bottom-4 lg:animate-pulse" alt="">
             <!-- <div id="main__container--images"
                 class="main__container--images animate__animated animate__flash animate__repeat-3">
                 <img src="src/images/circuito-logo.png" class="h-40h lg:h-20" alt="Logo do circuito Ibra">
