Desktop circuito and regulamentos: Updating header colors

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1 id="main__titulo" class="bg-blue-900 font-barlow uppercase text-white text-3xl mt-8 px-4 font-bold text-center rounded w-4/5 tracking-wider lg:w-auto">
                 Academia Ibra: a Fábrica de campeões</h1>
             
-            <img src="src/images/logo.png" class="h-50h mt-4 lg:h-52 lg:absolute lg:right-8 lg:bottom-4 lg:animate-pulse" alt="">
+            <img src="src/images/logo.png" class="h-50h mt-4 lg:h-52 lg:absolute lg:right-8 lg:bottom-4 lg:animate-pulse" alt="Logo Academia Ibra">
             <!-- <div id="main__container--images"
                 class="main__container--images animate__animated animate__flash animate__repeat-3">
                 <img src="src/images/circuito-logo.png" class="h-40h lg:h-20" alt="Logo do circuito Ibra">
