--- a/regulamento.html
+++ b/regulamento.html
@@ -22,24 +22,24 @@
 </head>
 
 <body>
-    <header class="flex items-center justify-between p-2 font-barlow">
+    <header class="bg-blue-950 flex items-center justify-between p-2 font-barlow">
         <img src="src/images/circuito-logo.png" class="h-12 lg:h-14 lg:ml-2"
             alt="Logo do circuito Ibra de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-full w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
-            lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
+            lg:bg-blue-950 lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
                 <li
-                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white li__hover">
                     <a href="index.html">Início</a>
                 </li>
 
                 <li
-                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white li__hover">
                     <a href="circuito.html">O circuito</a>
                 </li>
 
                 <li
-                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-white li__hover">
                     <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t"
                         target="_blank">Inscreva-se</a>
                 </li>
