Mobile and Desktop index: Refactoring h1 py

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <main class="bg-green-950 pb-8">
         <section id="main__intro" style="background-image: url('src/images/bg-index2.jpeg');" class="flex flex-col items-center justify-center h-90h mb-10 relative lg:justify-normal">
-            <h1 id="main__titulo" class="bg-blue-900 font-barlow uppercase text-white text-3xl mt-8 px-4 font-bold text-center rounded w-4/5 tracking-wider lg:w-auto">
+            <h1 id="main__titulo" class="bg-blue-900 font-barlow uppercase text-white text-3xl mt-8 py-1 px-4 font-bold text-center rounded w-4/5 tracking-wider lg:w-auto">
                 Academia Ibra: a Fábrica de campeões</h1>
             
             <img src="src/images/logo.png" class="h-50h mt-4 lg:h-52 lg:absolute lg:right-8 lg:bottom-4 lg:animate-pulse" alt="Logo Academia Ibra">
