Desktop index: Refactoring bg

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
 
     <main class="bg-green-950 pb-8">
-        <section id="main__intro" style="background-image: url('src/images/bg-index2.jpeg');" class="flex flex-col items-center justify-center h-90h mb-10 relative lg:justify-normal">
+        <section id="main__intro" style="background-image: url('src/images/bg-index2.jpeg'); background-size: cover; background-repeat: no-repeat;" class="flex flex-col items-center justify-center h-90h mb-10 relative lg:justify-normal">
             <h1 id="main__titulo" class="bg-blue-900 font-barlow uppercase text-white text-3xl mt-8 py-1 px-4 font-bold text-center rounded w-4/5 tracking-wider lg:w-auto">
                 Academia Ibra: a Fábrica de campeões</h1>
             
